# assign-resources-test

./: Cargo.toml
.cargo/: config.toml
src/: lib.rs  main.rs
