[package]
name = "assign-resources-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assign-resources = {path = "../assign-resources"}

embassy-executor = { version = "0.3", git = "https://github.com/embassy-rs/embassy.git", rev = "8369f7614ab7c7d035c99cd17b3e7bb5b2abfa70", features = [
    "nightly",
    "defmt",
    "integrated-timers",
    "arch-cortex-m",
    "executor-thread",
] }

embassy-stm32 = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git", rev = "8369f7614ab7c7d035c99cd17b3e7bb5b2abfa70", features = [
    "nightly",
    "defmt",
    "memory-x",
    "unstable-pac",
    "stm32h743zi",
    "time-driver-tim3",
    "exti",
    "unstable-traits",
] }

panic-probe = { version = "0.3", features = ["print-defmt"] }
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"

defmt = "0.3"
defmt-rtt = "0.4"